--- a/MarginCalculator.html
+++ b/MarginCalculator.html
@@ -139,7 +139,7 @@
         <span class="close-button" onclick="closeAboutUsPopup()">close</span>
         <h2 style="color: red;">About the Utility</h2>
         <p style="color: blue;">The Margin Calculator is developed using the buy rates of resources obtained from the TAG Team during August and September 2023.</p>
-	<p style="color: green;">This utility is intended solely for providing insights into deal margins. However, it does not hold authority for approval purposes.</p>
+	<p style="color: green;">This utility is intended solely for providing insights into deal margins. However, it does not hold approval authority.</p>
 	<p style="color: Brown;">If you encounter any issues while using this utility, please don't hesitate to reach out to the ESG Team for assistance.</p>
         <!-- Add your content here -->
     </div>
