--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <div class="container">
   <h2 style="color: blue;">Margin Calculator - Login</h2>
-  <p style="color: Brown;">Please enter the login id and password</p>
+  <p style="color: Brown;">Please enter the Username and Password</p>
   
   <form id="loginForm" onsubmit="authenticate(event)">
     <label for="username" class="form-label">Username:</label>
